[package]
name = "argv"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Command line arguments by reference: `Iterator<Item = &'static OsStr>`"
repository = "https://github.com/dtolnay/argv"
documentation = "https://docs.rs/argv"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# keep in sync with catch-all cfg in lib.rs
[target.'cfg(any(not(target_os = "linux"), target_env = "musl"))'.dependencies]
once_cell = "1.8"
