[package]
name = "argv"
version = "0.1.7"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-interface"]
description = "Command line arguments by reference: `Iterator<Item = &'static OsStr>`"
documentation = "https://docs.rs/argv"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/argv"
rust-version = "1.33"

[dev-dependencies]
rustversion = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
