[package]
name = "argv"
version = "0.1.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-interface"]
description = "Command line arguments by reference: `Iterator<Item = &'static OsStr>`"
documentation = "https://docs.rs/argv"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/argv"
rust-version = "1.68"

[dev-dependencies]
rustversion = "1.0"
target-triple = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
